--- a/tajmahal.html
+++ b/tajmahal.html
@@ -1,134 +1,18 @@
-<!--Monuments of India--------Taj Mahal-->
 <!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Taj Mahal</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Taj Mahal</title>
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="header">
-  Taj Mahal
-  <div class="header-right">
-    <a class="active" href="tajmahal.html">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
-</div>
-<hr width="100%">
-<div class="sticky">
-<ul style="float:top;width:100%;padding:0px;margin-right:0px;margin-left:0px;background-color: #333;">
-  <li><a href="monuments.html" target="_blank">Home</a></li>
-  <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
-  <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
-  <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
-  <li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Details Download</a></li>
-  <li><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
-  <li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.
-76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.
-googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.7556
-26-ya62.76752-ro-0-fo100!7i7776!8i3888!4m14!1m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mah
-al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.042142
-2!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
-<li align="Right"><a href=".html" target="_blank">Rohit Kumar</a></li>
-</ul></div>
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-<script>
-//Get the button
-var mybutton = document.getElementById("myBtn");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
-<div class="slideshow-container">
-
-	<div class="mySlides fade">
-	  <div class="numbertext">1 / 3</div>
- 	 <img src="1.tajmahal/image1.jpg" style="width:100%">
-	</div>
-
-	<div class="mySlides fade">
-	  <div class="numbertext">2 / 3</div>
-	  <img src="1.tajmahal/image2.jpg" style="width:100%">
-	</div>
-	
-	<div class="mySlides fade">
-	  <div class="numbertext">3 / 3</div>
-	  <img src="image3.jpg" style="width:100%">
-	</div>
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
-
-<script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-</script>
-<hr width="100%">
-<p align="justify" style="float:left;font-family:Arial;margin-left: 10px;"><b>Taj Mahal-The Glory of India</b><br>The Taj Mahal of Agra is one of the 
-Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
-magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
-been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even 
-after she remained but a memory, he made sure that this memory would never fade away. This man was the Mughal Emperor Shah Jahan, 
-who was head-over-heels in love with Mumtaz Mahal, his dear wife. She was a Muslim Persian princess (her name Arjumand Banu Begum before marriage)
- and he was the son of the Mughal Emperor Jehangir and grandson of Akbar the Great. It was at the age of 14 that he met Mumtaz and fell in love with her.
-Five years later in the year 1612, they got married.<br>
-
-Mumtaz Mahal, an inseparable companion of Shah Jahan, died in 1631, while giving birth to their 14th child. 
-It was in the memory of his beloved wife that Shah Jahan built a magnificent monument as a tribute to her, 
-which we today know as the "Taj Mahal". The construction of Taj Mahal started in the year 1631. 
-Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole
- of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, 
-it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and central Asia.
- After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.</p>
-<hr width="100%">
-<ul style="float:top;padding:0px;margin-right:0px;margin-left:0px;background-color: none;">
-<li><div style="text-align:center;float:left;margin-top: 10px;margin-bottom: 30x;margin-left: 10%;margin-right: 10%px;"><iframe align="center" width="90%" height="240" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-<li><div style="text-align:center;float:center;margin-top: 10px;margin-bottom: 30x;margin-left: 10%;margin-right: 10%px;"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview" width="90%" height="240"></iframe></div></li>
-<li><div style="text-align:center;float:right;margin-top: 10px;margin-bottom: 30x;margin-left: 10%;margin-right: 10%px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
-1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="90%" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
+<p class="header" id="head">
+  <div class="header-name" id="head-name">Taj Mahal</div>
+</p>
 <hr width="100%">
 </body>
 </html>
-
