--- a/tajmahal.html
+++ b/tajmahal.html
@@ -145,8 +145,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
-          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          <p>Contact Us<br>Rohit Kumar<br>ABESEC<br>9084950475<br>rohit.19b101051@abes.ac.in<br></p>
         </section>
       </div>
       <div class="text-center">&copy; Copyright Rohit Kumar 2020</div>
