--- a/tajmahal.html
+++ b/tajmahal.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Taj Mahal</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/styles.css">
@@ -147,7 +148,12 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <hr class="visible-xs">
         </section>
         <section id="about" class="col-sm-4">
-          <p>Contact Us<br>Rohit Kumar<br>ABESEC<br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a></p>
+          <p>Contact Us:<br>Rohit Kumar<br>ABESEC<br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>Follows me:<br>
+        <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>
+		<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>
+		<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>
+		<a href="https://www.instagram.com/rk__rohitkumar/" target="_blank" class="fa fa-instagram"></a>
+		</p>
         </section>
       </div>
       <div class="text-center">&copy; Copyright Rohit Kumar 2020</div>
